# recogs

./: .gitignore  Config.hs  ConfigFile.hs  ImageReader.hs  LICENSE  README.md  RandomList.hs  Recogs.hs  recogs.cabal  recogs.cnf
Recogs/: Data.hs
Recogs/Util/: Config.hs  ImageReader.hs  RandomList.hs
src/: Recogs.hs
src/Recogs/: Data.hs
src/Recogs/Util/: Config.hs  ImageReader.hs  RandomList.hs
