Name:                recogs
Version:             0.1
Synopsis:            Haskell/OpenGL based image-recognition-game for people suffering from dementia
-- Description:
Homepage:            https://github.com/FlashKorten/recogs
License:             MIT
License-file:        LICENSE
Author:              Sebastian Korten
Maintainer:          sebastian.korten@gmail.com
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.6

Extra-source-files:
  README.md
  RandomList.hs
  Config.hs
  ImageReader.hs
  Recogs/*.hs
Extra-tmp-files:
  Recogs.hi
  Recogs.o
  RandomList.hi
  RandomList.o
  Config.hi
  Config.o
  ImageReader.hi
  ImageReader.o
  Recogs/Data.hi
  Recogs/Data.o

Executable recogs
  Main-is:
    Recogs.hs
  Build-depends:
    base,
    JuicyPixels,
    directory,
    vector,
    filepath,
    MonadRandom,
    OpenGL,
    parsec,
    cmdargs,
    containers,
    GLUT

  ghc-options: -O2 -Wall -funbox-strict-fields
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

source-repository head
  type:     git
  location: git://github.com/FlashKorten/recogs.git
