Name:                recogs
Version:             0.2
Synopsis:            Haskell/SDL based image-recognition-game for people suffering from dementia
Description: Recogs is a very simple image recognition game where parts of an image are revealed one at a time.
Homepage:            https://github.com/FlashKorten/recogs
License:             MIT
License-file:        LICENSE
Author:              Sebastian Korten
Maintainer:          sebastian.korten@gmail.com
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.6

Extra-source-files:
  README.md
  Recogs/*.hs
  Recogs/Util/*.hs
Extra-tmp-files:
  Recogs.hi
  Recogs.o
  Recogs/Data.hi
  Recogs/Data.o
  Recogs/Util/RandomList.hi
  Recogs/Util/RandomList.o
  Recogs/Util/Config.hi
  Recogs/Util/Config.o

Executable recogs
  Main-is:
    Recogs.hs
  hs-Source-Dirs:
    src
  Build-depends:
    base >= 4 && < 5,
    directory,
    vector,
    filepath,
    MonadRandom,
    parsec,
    transformers,
    cmdargs,
    containers,
    SDL,
    SDL-image,
    SDL-gfx

  ghc-options: -O2 -Wall -funbox-strict-fields
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

source-repository head
  type:     git
  location: git://github.com/FlashKorten/recogs.git
